# AI_learning_PIAIC

./: README.md  poem.txt  pyproject.toml
src/hello_world/: main.py
