[project]
name = "hello_world"
version = "0.1.0"
description = "hello_world using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
kickoff = "hello_world.main:kickoff"
plot = "hello_world.main:plot"
kickoff_ai = "hello_world.main:kickoff"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
